setup compose POST route grabbing data from the form

--- a/views/compose.ejs
+++ b/views/compose.ejs
@@ -7,7 +7,7 @@
     <div class="col-md-6 mr-auto">
       <form action="/compose" method="post">
         <div class="input-group">
-          <input type="text" class="form-control" placeholder="Content">
+          <input type="text" class="form-control" name="content" placeholder="Content">
           <div class="input-group-append">
             <button class="btn btn-outline-dark" type="submit">Compose</button>
           </div>
