--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,7 +1,7 @@
 <% include partials/header.ejs %>
   
 <div class="container mt-5">
-  <h1>About</h1>
+  <h1 class="mb-5">About</h1>
   <p><%= aboutContent %></p>
 </div>
   
