--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -1,7 +1,7 @@
 <% include partials/header.ejs %>
   
 <div class="container mt-5">
-  <h1>Contact</h1>
+  <h1 class="mb-5">Contact</h1>
   <p><%= contactContent %></p>
 </div>
   
