--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,7 +1,7 @@
 <% include partials/header.ejs %>
   
 <div class="container mt-5">
-  <h1>Home</h1>
+  <h1 class="mb-5">Home</h1>
   <p><%= homeContent %></p>
 </div>
   
