--- a/views/compose.ejs
+++ b/views/compose.ejs
@@ -6,7 +6,7 @@
   <form action="/compose" method="post">
     <div class="form-group">
       <label for="title">Title</label>
-      <input class="form-control form-control-lg" type="text" name="title" id="title" placeholder="Enter Title">
+      <input class="form-control form-control-lg" type="text" name="title" id="title" placeholder="Enter Title" autofocus>
     </div>
     <div class="form-group">
       <label for="content">Content</label>
