--- a/views/compose.ejs
+++ b/views/compose.ejs
@@ -12,7 +12,7 @@
       <label for="content">Content</label>
       <textarea class="form-control form-control-lg" name="content" id="content" rows="5" placeholder="Your Content"></textarea>
     </div>
-    <button class="btn btn-dark btn-lg">Publish</button> 
+    <button class="btn my-btn btn-lg">Publish</button> 
   </form>
 
 </div>
