--- a/views/home.ejs
+++ b/views/home.ejs
@@ -3,7 +3,17 @@
 <div class="container mt-5">
   <h1 class="mb-5">Home</h1>
   <p><%= homeContent %></p>
-</div>
+
+  <h1 class="mt-5">Posts</h1>
+  <hr>
+
+  <% posts.forEach(function(post) { %>
+    <div class="p-2">
+      <h3><%= post.title %></h3>
+      <p class="lead"><%=post.content %></p>
+    </div>
+  <% }); %>
+</div><!-- /container -->
   
 <% include partials/footer.ejs %>
 
