--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,3 +1,9 @@
+body {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
+
 .container-fluid {
     padding-top: 70px;
     padding-bottom: 70px;
@@ -28,10 +34,8 @@
 }
 
 .footer {
-	position: absolute;
-	text-align: center;
-	bottom: 0;
-	width: 100%;
+    text-align: center;
+    margin-top: auto;
 	height: 60px;
 	background-color: #1abc9c;
 }
