--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,6 +1,6 @@
 
   <div class="footer">
-    <p class="mb-0">Made with ❤️ by Chris Davis</p>
+    <p>Made with ❤️ by Chris Davis</p>
   </div>
 
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
