--- a/views/home.ejs
+++ b/views/home.ejs
@@ -16,7 +16,7 @@
 
   <% posts.forEach(function(post) { %>
     <div class="post">
-      <h3><%= post.title %></h3>
+      <h3><a class="text-dark" href="/posts/<%= post.title %>"><%= post.title %></a></h3>
       <p class="lead"><%= post.content %></p>
     </div>
   <% }); %>
