--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,8 +1,9 @@
 <% include partials/header.ejs %>
   
 <div class="container mt-5">
-  <h1 class="mb-5">About</h1>
-  <p><%= aboutContent %></p>
+  <h1>About</h1>
+  <hr>
+  <p class="lead"><%= aboutContent %></p>
 </div>
   
 <% include partials/footer.ejs %>
