--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -1,8 +1,9 @@
 <% include partials/header.ejs %>
   
 <div class="container mt-5">
-  <h1 class="mb-5">Contact</h1>
-  <p><%= contactContent %></p>
+  <h1>Contact</h1>
+  <hr>
+  <p class="lead"><%= contactContent %></p>
 </div>
   
 <% include partials/footer.ejs %>
